--- a/pink-purple/package.json
+++ b/pink-purple/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
+    "netlify-cli": "^23.9.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.16"
