--- a/pink-purple/netlify.toml
+++ b/pink-purple/netlify.toml
@@ -11,6 +11,12 @@
   to = "/.netlify/functions/:splat"
   status = 200
 
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [dev]
   command = "npm run dev"
   framework = "#auto"
